fixed album covers

--- a/client/style.css
+++ b/client/style.css
@@ -203,9 +203,13 @@ box-shadow: 0px 10px 28px -1px rgba(0,0,0,0.75);*/
   color: white;
 }
 
-.text-container {
-  max-width: 320px;
+.textContainer {
+  max-width: 280px;
   max-height: 64px;
   display: inline-block;
   vertical-align: middle;
+}
+
+.label {
+  width: 229.109;
 }
